# chiral-client-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  apis.txt  build.rs
.github/workflows/: cross-platform-test.yml
src/: api.rs  file.rs  ftp.rs  lib.rs  main.rs  proto.rs
src/api/: client.rs  credits.rs  jobs.rs  mod.rs  projects.rs  token.rs
src/tests/: client_tests.rs  credits_tests.rs  mod.rs
tests/: client_integration.rs  client_test.rs  common.rs  credit_test.rs  ftp_client.rs  job_test.rs  project_test.rs  token_test.rs
tests/common/: mod.rs
