[package]
name = "chiral-client-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rand = "0.8"
ftp = "3.0.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
