[package]
name = "chiral-client"
version = "0.1.0"
edition = "2024"
authors = ["Chiral Ltd. <dev@chiral.one>"]
license = "MPL-2.0"
description = "Chiral Service Rust SDK"
repository = "https://github.com/chiral-data/chiral-client-rust"
homepage = "https://github.com/chiral-data/chiral-client-rust"
documentation = "https://www.chiral.one"
keywords = ["chiral", "rust", "sdk"]
categories = ["api-bindings"]

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rand = "0.8"
ftp = "3.0.1"
uuid = { version = "1", features = ["v4"] }
libunftp = "0.20"
unftp-sbe-fs = "0.2"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libunftp = "0.20"
unftp-sbe-fs = "0.2"
rand = "0.8"
once_cell = "1.18"